# VectorInmueble-AI

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/agente_inmobiliario/: crew.py  main.py
src/agente_inmobiliario/config/: agents.yaml  tasks.yaml
src/agente_inmobiliario/tools/: custom_tools.py
